correct bug animation cube with other browser

--- a/app/assets/stylesheets/welcome.css.sass
+++ b/app/assets/stylesheets/welcome.css.sass
@@ -478,9 +478,9 @@ $primary-color: #003346
 @keyframes rotateB
   0%
     +transform(rotateY(90deg) rotateX(-90deg) translateZ(227px))
-  25%
+  28%
     +transform(rotateY(90deg) rotateX(-90deg) translateZ(227px))
-  50%
+  55%
     +transform(rotateY(0deg) rotateX(-90deg) translateZ(227px))
   100%
     +transform(rotateY(0deg) rotateX(-90deg) translateZ(227px))
@@ -493,7 +493,7 @@ $primary-color: #003346
     +transform(rotateY(0deg)) 
 @keyframes rotateT
   0%
-    +transform(rotateZ(180deg) rotateX(90deg) translateZ(-227px))
+    +transform(rotateY(180deg) rotateX(90deg) translateZ(227px))
   50%
     +transform(rotateY(180deg) rotateX(90deg) translateZ(227px))
   100%
